# ouispy-c6

./: .gitignore  CMakeLists.txt  HARDWARE.md  LICENSE  README.md  flash.bat  flash.py  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/esp_lcd_jd9853/: esp_lcd_jd9853.c
components/esp_lcd_jd9853/include/: esp_lcd_jd9853.h
components/fatfs/src/: ffconf.h
main/: CMakeLists.txt  app_common.c  app_common.h  ble_scanner.c  ble_scanner.h  button.c  button.h  buzzer.c  buzzer.h  display.c  display.h  flock_you.c  flock_you.h  font5x7.h  fox_hunter.c  fox_hunter.h  idf_component.yml  index.html  led_ctrl.c  led_ctrl.h  main.c  map_tile.c  map_tile.h  nvs_store.c  nvs_store.h  sky_spy.c  sky_spy.h  sniffer.c  sniffer.h  storage_ext.c  storage_ext.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
